--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,23 @@
     
         canvas {
             width: 100%;
-            height: 100%
+            height: 100%;
+        }
+        
+        #boxWalls {
+            position: fixed;
+            left: 10px;
+            top: 10px;
+            color: yellow;
         }
     </style>
 </head>
 <body>
+    <div id="boxWalls">
+        <span>Box walls:</span>
+        <input type="checkbox" name="boxWalls" value="boxWalls">
+    </div>
+    <div id="game"></div>
     <script src="/main.bundle.js"></script>
 </body>
 </html>
